tests/expected_invalid_phase_reuse_after_move.diag.out
<input>:21:5: error: affine value 'config' was already moved
        config.id
        ^^^^^^
<input>:20:13: note: 'config' was previously moved here
        consume(config);
                ^^^^^^
